--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "cool-ascii-faces": "^1.3.4",
     "ejs": "^3.1.5",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "fs": "0.0.1-security",
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "got": "^11.3.0",
