--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "ejs": "^3.1.5",
     "express": "^4.15.2",
     "fs": "0.0.1-security",
-    "node-fetch": "^2.6.1",
-    "mongodb": "^3.6.4"
+    "mongodb": "^3.6.4",
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "got": "^11.3.0",
