--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^3.1.5",
     "express": "^4.15.2",
     "fs": "0.0.1-security",
+    "js-sha256": "^0.9.0",
     "mongodb": "^3.6.4",
     "node-fetch": "^2.6.1"
   },
