--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "fs": "0.0.1-security",
     "js-sha256": "^0.9.0",
     "mongodb": "^3.6.4",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
     "got": "^11.3.0",
